comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meu primeiro site</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Curso Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Curso HTML:5</h2>
             <P>
-                Conteudo 001
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cumque facere et,unde rem aliquid itaque iste animi, explicabo,
+                similique at aliquam ut laborum deserunt temporibus esse doloremque! 
+                Possimus, praesentium aut!
             </P>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
+            <h2>Curso de Javascript</h2>
             <p>
-                conteudo 002
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Dolorum, quae ad non officiis, quod ut nisi porro eius itaque 
+                libero dicta voluptatibus saepe, delectus odit dolore corrupti repellendus fugiat! Dolor.
             </p>
         </article>
     </main>
