--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curso em Vídeo</title>
     <link rel="stylesheet" href="estile/style.css">
-    <title>meu primeiro site</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Curso Grátis</h1>
+            <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
-
         <article>
-            <h2>Curso HTML:5</h2>
-            <P>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Cumque facere et,unde rem aliquid itaque iste animi, explicabo,
-                similique at aliquam ut laborum deserunt temporibus esse doloremque! 
-                Possimus, praesentium aut!
-            </P>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
-
         <article>
-            <h2>Curso de Javascript</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Dolorum, quae ad non officiis, quod ut nisi porro eius itaque 
-                libero dicta voluptatibus saepe, delectus odit dolore corrupti repellendus fugiat! Dolor.
-            </p>
+            <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
